--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ a{
 }
 a:link { color: black; text-decoration: none;}
 a:visited { color: black; text-decoration: none;}
-a:hover { color: #ef6d00; text-decoration: none;}
+a:hover { color: #00498c; text-decoration: none;}
 a:active { text-decoration:none !important }
 .header {
     width: 100%;
@@ -25,14 +25,14 @@ a:active { text-decoration:none !important }
 
 }
 .nav {
-    height: 140px;
+    height: 120px;
 }
 .inner_middle {
     padding: 20px 20px;
     border-bottom: 1px solid #c9caca;
 }
 .menu_list {
-    float: right;
+    float: left;
 }
 .menu_list li {
     font-size: 24px;
@@ -40,7 +40,7 @@ a:active { text-decoration:none !important }
     float: left;
     height: 88px;
     line-height: 88px;
-    padding-right: 50px;
+    padding-right: 30px;
 }
 .notice{
     display: none;
@@ -51,9 +51,51 @@ a:active { text-decoration:none !important }
     text-align: center;
 }
 .main_club_list {
-    padding: 70px 0;
+    padding: 50px 0;
     background: #ebebeb;
     text-align: center;
+    display: grid;
+}
+.result-image {
+    height: 240px;
+    width: 240px;
+    background-color: #fff;
+    background-repeat : no-repeat;
+    background-size : cover;
+    margin: 0 auto;
+    position: relative;
+}
+.img-cover {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    background-color: rgba(0, 0, 0, 0.3);
+    background-position: center;
+    background-repeat: no-repeat;
+    top: 0;
+}
+.img-cover p{
+    position: relative;
+    margin: 0 auto;
+    color: #fff;
+    font-size: 30px;
+    padding: 90px 0;
+}
+.title {
+    font-size: 15px;
+    font-weight: bold;
+}
+.time {
+    color: #888;
+}
+.club_list {
+    padding: 0 150px;
+}
+.club{
+    float: left;
+    margin-right: 50px;
+    background-color: #fff;
 }
 /* body {
     background-color: #ccdce9;
@@ -64,6 +106,7 @@ article {
     padding-bottom: 5em;
 }
 .progress {
+    
     height: 1.5rem;
 }
 .margin_auto {
