--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ a:link { color: black; text-decoration: none;}
 a:visited { color: black; text-decoration: none;}
 a:hover { color: #00498c; text-decoration: none;}
 a:active { text-decoration:none !important }
+.table td, .table th {
+    padding: 0.9rem;
+}
 .header {
     width: 100%;
     background-color: #fff;
@@ -90,12 +93,22 @@ a:active { text-decoration:none !important }
     color: #888;
 }
 .club_list {
-    padding: 0 150px;
+    position: relative;
+    margin: 0 auto;
 }
 .club{
     float: left;
     margin-right: 50px;
     background-color: #fff;
+}
+.table_wrap {
+    position: relative;
+    display: grid;
+}
+.rank_table {
+    position: relative;
+    margin: 0 auto;
+    padding: 100px 0;
 }
 /* body {
     background-color: #ccdce9;
