홍보페이지, 시설 페이지 추가

--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ button:focus,button:active {
     float: left;
 }
 .box_more {
-    background-image: url("/images/plus.png");
+    background-image: url("./images/plus.png");
     background-repeat: no-repeat;
     width: 60px;
     height: 60px;
